# claude-statusline

./: .gitignore  Makefile  README.md  claude-statusline.cabal
.github/workflows/: ci.yml
app/: Main.hs
legacy/: statusline.sh  statusline_test.sh
src/Statusline/: Ambient.hs  Ansi.hs  Cache.hs  Config.hs  Humanize.hs  Input.hs  Json.hs  Moon.hs  News.hs  RateSample.hs  Render.hs  Shell.hs  Ticker.hs  Transcript.hs  Truncate.hs  Weather.hs
test/Statusline/: AmbientSpec.hs  CacheSpec.hs  ConfigSpec.hs  HumanizeSpec.hs  InputSpec.hs  MoonSpec.hs  NewsSpec.hs  RateSampleSpec.hs  RenderSpec.hs  ShellSpec.hs  TickerSpec.hs  TranscriptSpec.hs  TruncateSpec.hs  WeatherSpec.hs
